fix: fix header visibilaty

--- a/GraphiQL-App/src/components/Header/Header.css
+++ b/GraphiQL-App/src/components/Header/Header.css
@@ -2,6 +2,7 @@
   height: 60px;
   width: 100%;
   position: fixed;
+  z-index: 999;
   top: 0;
   left: 0;
   min-height: 50px;
